--- a/styles.css
+++ b/styles.css
@@ -538,3 +538,28 @@ input[type="range"]#location-longitude-slider {
     margin: 0;
     padding: 0;
 }
+
+/* Calculated outputs section styling */
+.outputs-container {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.outputs-container div {
+    position: relative;
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    padding-right: 30px;  /* Make room for help icon */
+}
+
+.outputs-container label {
+    width: 340px;
+    margin-right: 10px;
+    font-family: inherit;
+}
+
+.outputs-container input {
+    width: 100px;
+}
